Formatação das datas/ Ajustando segundo menu