@@ -1,3 +1,5 @@
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.Scanner;
 import java.util.Collection;
 import java.util.ArrayList;
@@ -5,7 +7,6 @@ import java.util.ArrayList;
 public class Main {
 	public static void main(String[] args) {
 
-		String dataNasc;
 		boolean auxB = true;
 		boolean auxB2 = true;
 		int menu;
@@ -13,8 +14,11 @@ public class Main {
 		ArrayList<Bebe> bebes = new ArrayList<Bebe>();
 
 		Scanner scanner = new Scanner(System.in);
+		DateTimeFormatter formatarData = DateTimeFormatter.ofPattern("dd/MM/yyyy");
 		// Menu para a escolha da operação
 		do {
+			limparConsole();
+
 			System.out.println("------------------------------------------------------");
 			System.out.println("Escolha uma operação: ");
 			System.out.println("1: Registrar bebê.");
@@ -32,9 +36,9 @@ public class Main {
 
 				case 1:
 					scanner.nextLine();
-					System.out.println("Digite o nome do bebe: ");
+					System.out.println("Digite o nome da criança: ");
 					String nome = scanner.nextLine();
-					System.out.print("Digite o cpf do bebe: ");
+					System.out.print("Digite o cpf da criança: ");
 					int cpf = scanner.nextInt();
 					// Estrutura de repetição para verificar se existe registro com o mesmo cpf
 					for (int i = 0; i < bebes.size(); i++) {
@@ -50,28 +54,36 @@ public class Main {
 						break;
 					scanner.nextLine();
 
-					System.out.print("Digite a data de nascimento do bebe: ");
-					dataNasc = scanner.nextLine();
+					System.out.print("Digite a data de nascimento(formato dd/mm/aaaa): ");
+					String dataNasc = scanner.nextLine();
+					LocalDate dataNascFormatada = LocalDate.parse(dataNasc, formatarData);
 					// Criação do objeto dentro da coleção genérica
-					bebes.add(new Bebe(nome, cpf, dataNasc));
+					bebes.add(new Bebe(nome, cpf, dataNascFormatada));
 					break;
 				case 2:
 					System.out.println("------------------------------------------------------");
 					System.out.println("Digite o CPF da criança");
 					String nomeVacina = scanner.nextLine();
-					System.out.println("Digite o dia em que a criança está se vacinando");
-					String diaVacina = scanner.nextLine();
-					System.out.println("Digite o mês em que a criança está se vacinando");
-					String mesVacina = scanner.nextLine();
-					System.out.println("Digite o ano em que a criança está se vacinando");
-					String anoVacina = scanner.nextLine();
+					System.out.print("Digite a data da vacina(formato dd/mm/aaaa): ");
+					String dataVacina = scanner.nextLine();
+					LocalDate dataVacinaFormatada = LocalDate.parse(dataVacina, formatarData);
+
+					System.out.println("------------------------------------------------------");
+					System.out.println("Escolha a vacina");
+					System.out.println("1: BCG");
+					System.out.println("2: Hepatite B");
+					System.out.println("3: Penta/DTP");
+					System.out.println("4: VIP/VOP");
+					System.out.println("5: Meningocócica");
 					System.out.println("------------------------------------------------------");
 					break;
 				case 3:
 					int menu2;
+					System.out.println("------------------------------------------------------");
 					System.err.println("1: exibir todas as crianças registradas");
 					System.out.println("2: Exibir vacinas por criança");
 					System.out.println("0: Voltar ao menu principal");
+					System.out.println("------------------------------------------------------");
 					menu2 = scanner.nextInt();
 					limparConsole();
 
@@ -103,15 +115,20 @@ public class Main {
 
 	public final static void limparConsole() {
 		try {
-			final String os = System.getProperty("os.name");
+            final String os = System.getProperty("os.name");
 
-			if (os.contains("Windows")) {
-				Runtime.getRuntime().exec("cls");
-			} else {
-				Runtime.getRuntime().exec("clear");
-			}
-		} catch (final Exception e) {
-		}
+            if (os.contains("Windows")) {
+                // Para Windows
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
+                // Para Unix/Linux/Mac
+                System.out.print("\033[H\033[2J");
+                System.out.flush();
+            }
+        } catch (Exception e) {
+            // Trate as exceções, se houver
+            System.out.println("Erro ao tentar limpar o console: " + e.getMessage());
+        }
 	}
 
 	public final static void pressioneEnter() {
